...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <EditText
                android:id="@+id/shipping_street_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/street_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/shipping_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/shipping_postal_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/postal_code"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/shipping_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/province"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/shipping_country"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/country"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"/>
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <EditText
                android:id="@+id/card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_number"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp" />
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/expiry_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/expiry_date"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/cvv"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/cvv"
                    android:importantForAutofill="no"
                    android:inputType="number"
...

        <TextView
            android:id="@+id/phone_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/phone_number"
            android:textSize="32sp"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:id="@+id/contact_info"
            android:layout_width="match_parent"
...

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/email_address"
            android:textSize="32sp"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
...
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:onClick="onSaveClick"
            android:text="@string/save_information" />

        <Button
            android:id="@+id/checkout_button"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:onClick="onCheckoutClick"
            android:text="@string/place_order" />

    </LinearLayout>
...
