...
    android:orientation="vertical"
    android:id="@+id/activity_main">

    <include layout="@layout/search_layout"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cart_button"
        android:layout_marginTop="0dp" />

</LinearLayout>
...
