<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/order_placed">


    <ImageView
        android:id="@+id/checkmark"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:src="@drawable/checkmark" />

    <TextView
        android:id="@+id/confirmation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_placed"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="48dp"/>

    <TextView
        android:id="@+id/customer_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textSize="20sp" />

</LinearLayout>
