<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/activity_cart">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/totalText"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/checkoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkOutOnClick"
            android:text="@string/checkout" />

    </LinearLayout>

</ScrollView>
