...
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_centerVertical="true"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/productTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/addToCart"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="addToCartOnClick"
            android:text="@string/add_to_cart" />

...
