...
        android:layout_marginEnd="0dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:text="Price" />

    <Button
        android:id="@+id/compareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="75dp"
        android:text="@string/compare"
...
