...
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/comparison"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/activity_compare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="0dp"
...
